# sage

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO  buf.gd  buf.tscn  buffer.gd  build.zig  build.zig.zon  codes.h  common.gd  common.h  editor.gd  go.mod  go.sum  inp.gd  justfile  main.c  main.tscn  project.godot
assets/: black.png.import
buffer/: buffer.c  buffer.h
docs/dev/: design_v1.excalidraw  main.md
editor/: editor.c  editor.gd  editor.h
engine/: core.gd  err.gd  orwynn.gd  path.gd
engine/file/: justfile
godot/: .gitignore  buf.gd  icon.svg.import  inp.gd
godot/assets/: monogram.ttf.import
godot/editor/: editor.tscn
godot/engine/: data.gd  err.gd  path.gd  uuid.gd
godot/engine/file/: file.c  file.gdextension.sample
input/: input.c  input.h
lib/bone/: app.c  app.go  bone.c  bone.go  bone.h  err.go  error.go  file.go  i18n.go  internal.h  log.go  str.go  str_test.go  time.go
lib/bone/include/: bone.h
lib/hashmap/: LICENSE  hashmap.c
lib/ini/: LICENSE.txt  ini.c
lib/ini/examples/: ini_example.c  ini_xmacros.c
lib/map/: hashmap.h
lib/raylib/include/: rlgl.h
lib/utils/: utils.h
plugins/editor/: README.md  editor.c  justfile
src/: common.h  ini.h  main.c  main.cpp  main.go  main.zig  sample_keys.cfg  sgcore.cpp  sgcore.h  signal.h
src/bone/: bone.cpp  bone.h  bone.zig
src/core/: core.go  plugin.go
src/plugin/: plugin.c
src/plugins/home/: home.h
src/raygui/icons/: raygui_icons.h
src/raygui/src/: raygui.h
src/raygui/styles/ashes/: style_ashes.h
src/raygui/styles/bluish/: style_bluish.h
src/raygui/styles/candy/: style_candy.h
src/raygui/styles/cherry/: style_cherry.h
src/raygui/styles/cyber/: style_cyber.h
src/raygui/styles/dark/: style_dark.h
src/raygui/styles/enefete/: style_enefete.h
src/raygui/styles/jungle/: style_jungle.h
utils/: utils.c  utils.h
(+3 files in other folders)
